# HR-Pulse

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml  setup_project.bat  test.db
.github/workflows/: ci.yml
backend/app/api/db/: database.py
backend/app/api/db/models/: job.py  user.py
backend/app/api/db/schemas/: job.py  predict.py  user.py
backend/app/api/routes/: auth.py  jobs.py  predict.py
backend/app/ml/: 02_cleaning.ipynb  data_exploring.ipynb  ds-jobs-clean.csv
backend/app/ml/models/: encoder.pkl  encoders.pkl  model.pkl  model_meta.json  tfidf.pkl  tfidf_desc.pkl  tfidf_title.pkl
backend/app/ml/notebooks/: cleaning.ipynb  feature_eng.ipynb  train_model.ipynb
backend/app/ml/predictor/: train.py
backend/app/pipeline/: clean.py  database_inject.py  ner_azure.py  ner_local.py
backend/app/services/: auth_services.py  job_services.py  predict_services.py  user_services.py
backend/app/utils/: hashing.py
tests/: conftest.py  test_routes_jobs.py  test_routes_predict.py
