[project]
name = "hr-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
]
