[project]
name = "hr-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "en-core-web-lg",
    "fastapi>=0.133.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
